--- a/dudu/MainView/Center/View/OrderTableViewCell.xib
+++ b/dudu/MainView/Center/View/OrderTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="122" id="KGk-i7-Jjw" customClass="OrderTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="122"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="122" id="KGk-i7-Jjw" customClass="OrderTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="121.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="141.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X7g-qa-3Dh">
@@ -33,6 +33,26 @@
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bIf-nf-NH9">
+                        <rect key="frame" x="109" y="40" width="50" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="0Bj-jb-J6p"/>
+                            <constraint firstAttribute="height" constant="15" id="Ut3-vO-77n"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.12549019610000001" green="0.85098039219999999" blue="0.58039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="赠品" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2iD-nt-heM">
+                        <rect key="frame" x="169" y="40" width="35" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="35" id="5L4-FF-veb"/>
+                            <constraint firstAttribute="height" constant="15" id="Sza-Tm-Bvn"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.95294117649999999" green="0.59215686270000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rr2-vs-r4L">
@@ -66,24 +86,40 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="67r-sX-mvY">
-                        <rect key="frame" x="14" y="121" width="292" height="0.5"/>
+                        <rect key="frame" x="14" y="141" width="292" height="0.5"/>
                         <color key="backgroundColor" red="0.82745098039215681" green="0.82745098039215681" blue="0.82745098039215681" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="n11-vI-vXR"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FwC-A8-ecM">
+                        <rect key="frame" x="109" y="117" width="201" height="13"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="13" id="hY6-Lr-tog"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailing" secondItem="FwC-A8-ecM" secondAttribute="trailing" constant="10" id="4TP-Gd-7gH"/>
                     <constraint firstItem="eDB-8d-gNi" firstAttribute="top" secondItem="2fC-kl-g2j" secondAttribute="bottom" constant="56" id="5RV-UK-4gg"/>
+                    <constraint firstItem="FwC-A8-ecM" firstAttribute="top" secondItem="fyP-j8-j38" secondAttribute="bottom" constant="15" id="6Gk-SA-eEi"/>
                     <constraint firstAttribute="trailing" secondItem="eDB-8d-gNi" secondAttribute="trailing" constant="15" id="CmP-EQ-tdD"/>
+                    <constraint firstItem="bIf-nf-NH9" firstAttribute="leading" secondItem="X7g-qa-3Dh" secondAttribute="trailing" constant="10" id="DE7-y2-ZAg"/>
                     <constraint firstItem="2fC-kl-g2j" firstAttribute="leading" secondItem="X7g-qa-3Dh" secondAttribute="trailing" constant="10" id="Fvh-WL-hH1"/>
                     <constraint firstItem="rr2-vs-r4L" firstAttribute="top" secondItem="2fC-kl-g2j" secondAttribute="bottom" constant="34" id="PET-l9-ZDR"/>
                     <constraint firstItem="2fC-kl-g2j" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="Twa-60-fmw"/>
                     <constraint firstItem="X7g-qa-3Dh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="18" id="U8u-16-gqe"/>
+                    <constraint firstItem="bIf-nf-NH9" firstAttribute="top" secondItem="2fC-kl-g2j" secondAttribute="bottom" constant="6" id="UUJ-ES-s5h"/>
+                    <constraint firstItem="FwC-A8-ecM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="109" id="VAp-mK-q2g"/>
                     <constraint firstItem="X7g-qa-3Dh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="13" id="VDb-kK-rub"/>
                     <constraint firstAttribute="trailing" secondItem="2fC-kl-g2j" secondAttribute="trailing" constant="10" id="Vvv-iy-4Ma"/>
                     <constraint firstAttribute="trailing" secondItem="67r-sX-mvY" secondAttribute="trailing" constant="14" id="adz-l5-umP"/>
                     <constraint firstItem="fyP-j8-j38" firstAttribute="top" secondItem="rr2-vs-r4L" secondAttribute="bottom" constant="7" id="bSD-QE-WVU"/>
+                    <constraint firstItem="2iD-nt-heM" firstAttribute="top" secondItem="2fC-kl-g2j" secondAttribute="bottom" constant="6" id="bXd-JG-cdY"/>
+                    <constraint firstItem="2iD-nt-heM" firstAttribute="leading" secondItem="bIf-nf-NH9" secondAttribute="trailing" constant="10" id="dOH-sz-z3z"/>
                     <constraint firstItem="fyP-j8-j38" firstAttribute="leading" secondItem="X7g-qa-3Dh" secondAttribute="trailing" constant="10" id="q40-RH-hsc"/>
                     <constraint firstItem="67r-sX-mvY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="r7t-Ro-yfe"/>
                     <constraint firstItem="rr2-vs-r4L" firstAttribute="leading" secondItem="X7g-qa-3Dh" secondAttribute="trailing" constant="10" id="wjP-Fb-lai"/>
@@ -91,6 +127,17 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="ActuallyLabel" destination="FwC-A8-ecM" id="puq-Q7-HoR"/>
+                <outlet property="CountLabel" destination="eDB-8d-gNi" id="kO9-dc-QuG"/>
+                <outlet property="GiftLabel" destination="2iD-nt-heM" id="EwD-aj-gDF"/>
+                <outlet property="GuigeLabel" destination="bIf-nf-NH9" id="hJH-7o-qBL"/>
+                <outlet property="GuigeLabelWidth" destination="0Bj-jb-J6p" id="AE6-Tk-TSE"/>
+                <outlet property="MainImage" destination="X7g-qa-3Dh" id="XPy-fi-QWl"/>
+                <outlet property="NameLabel" destination="2fC-kl-g2j" id="PD2-yH-r0E"/>
+                <outlet property="PriceLabel" destination="fyP-j8-j38" id="lRj-n0-w7Q"/>
+                <outlet property="UnitPriceLabel" destination="rr2-vs-r4L" id="LKo-fV-oEo"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
