--- a/dudu/MainView/Home/View/CartView.xib
+++ b/dudu/MainView/Home/View/CartView.xib
@@ -27,12 +27,12 @@
                             <rect key="frame" x="0.0" y="250" width="375" height="50"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="筐(可退)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ABc-Bz-h2B">
-                                    <rect key="frame" x="16" y="15" width="179" height="20"/>
+                                    <rect key="frame" x="16" y="15" width="199" height="20"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DLH-eB-HCB">
-                                    <rect key="frame" x="205" y="17.5" width="50" height="15"/>
+                                    <rect key="frame" x="225" y="17.5" width="50" height="15"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="15" id="4XR-Ab-j5k"/>
                                         <constraint firstAttribute="width" constant="50" id="m5b-sC-Pzt"/>
@@ -55,7 +55,7 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="DCe-Sx-jaY" secondAttribute="trailing" constant="15" id="0DN-mu-09U"/>
-                                <constraint firstItem="DCe-Sx-jaY" firstAttribute="leading" secondItem="DLH-eB-HCB" secondAttribute="trailing" constant="35" id="1Bx-nK-tQX"/>
+                                <constraint firstItem="DCe-Sx-jaY" firstAttribute="leading" secondItem="DLH-eB-HCB" secondAttribute="trailing" constant="15" id="1Bx-nK-tQX"/>
                                 <constraint firstAttribute="bottom" secondItem="ABc-Bz-h2B" secondAttribute="bottom" constant="15" id="3ic-4C-ips"/>
                                 <constraint firstItem="DLH-eB-HCB" firstAttribute="centerY" secondItem="bvh-dY-glo" secondAttribute="centerY" id="96C-1W-lYc"/>
                                 <constraint firstItem="DCe-Sx-jaY" firstAttribute="centerY" secondItem="bvh-dY-glo" secondAttribute="centerY" id="D8j-NV-sh0"/>
@@ -136,6 +136,7 @@
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="BackView" destination="ERM-fa-E6S" id="Upa-ZZ-Xva"/>
                 <outlet property="Count" destination="DLH-eB-HCB" id="54i-dA-U3G"/>
                 <outlet property="MainViewHeight" destination="x74-T8-bHt" id="zOK-N8-EOI"/>
                 <outlet property="Price" destination="DCe-Sx-jaY" id="pMp-9T-PiD"/>
