--- a/dudu/MainView/ShoppingCart/View/ChosenTimeAndStyle.xib
+++ b/dudu/MainView/ShoppingCart/View/ChosenTimeAndStyle.xib
@@ -95,7 +95,7 @@
                                 <constraint firstAttribute="width" constant="30" id="wGW-4C-ud0"/>
                                 <constraint firstAttribute="height" constant="30" id="xGl-MM-mZ2"/>
                             </constraints>
-                            <state key="normal" title="X">
+                            <state key="normal" image="gwc_close">
                                 <color key="titleColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
@@ -147,4 +147,7 @@
             <point key="canvasLocation" x="31.5" y="85.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="gwc_close" width="15" height="15"/>
+    </resources>
 </document>
