--- a/dudu/MainView/ShoppingCart/View/OrderHeaderView.xib
+++ b/dudu/MainView/ShoppingCart/View/OrderHeaderView.xib
@@ -61,6 +61,12 @@
                                 <action selector="chosenaddress:" destination="iN0-l3-epB" eventType="touchUpInside" id="NQ1-Pw-pzw"/>
                             </connections>
                         </button>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="位置形状" translatesAutoresizingMaskIntoConstraints="NO" id="8gD-Uf-jSk">
+                            <rect key="frame" x="0.0" y="82" width="375" height="3"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="3" id="Zhe-IX-0Ay"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -68,6 +74,7 @@
                         <constraint firstItem="gzK-kJ-hH5" firstAttribute="leading" secondItem="9Pl-0d-1Iv" secondAttribute="trailing" constant="12" id="CEa-lB-BFU"/>
                         <constraint firstItem="MDv-fV-P4T" firstAttribute="leading" secondItem="tHF-Ni-YeR" secondAttribute="trailing" constant="20" id="FQn-cK-Tc3"/>
                         <constraint firstItem="uIy-ew-Gv8" firstAttribute="top" secondItem="XGL-ja-GuX" secondAttribute="top" constant="5" id="G9s-1V-sJC"/>
+                        <constraint firstAttribute="bottom" secondItem="8gD-Uf-jSk" secondAttribute="bottom" id="HPe-o3-XWE"/>
                         <constraint firstAttribute="trailing" secondItem="MDv-fV-P4T" secondAttribute="trailing" constant="15" id="Mn1-rK-R6J"/>
                         <constraint firstItem="MDv-fV-P4T" firstAttribute="leading" secondItem="uIy-ew-Gv8" secondAttribute="trailing" constant="10" id="OSe-0i-Gfm"/>
                         <constraint firstItem="9Pl-0d-1Iv" firstAttribute="leading" secondItem="XGL-ja-GuX" secondAttribute="leading" constant="12" id="TDk-nL-cIc"/>
@@ -76,7 +83,9 @@
                         <constraint firstItem="MDv-fV-P4T" firstAttribute="centerY" secondItem="XGL-ja-GuX" secondAttribute="centerY" id="klD-Hq-Ecg"/>
                         <constraint firstItem="tHF-Ni-YeR" firstAttribute="top" secondItem="XGL-ja-GuX" secondAttribute="top" constant="21" id="ndw-q3-d6w"/>
                         <constraint firstItem="9Pl-0d-1Iv" firstAttribute="centerY" secondItem="XGL-ja-GuX" secondAttribute="centerY" id="oqL-jb-ALv"/>
+                        <constraint firstAttribute="trailing" secondItem="8gD-Uf-jSk" secondAttribute="trailing" id="qX0-Ov-v8C"/>
                         <constraint firstItem="gzK-kJ-hH5" firstAttribute="top" secondItem="tHF-Ni-YeR" secondAttribute="bottom" constant="10" id="sWE-HR-kyn"/>
+                        <constraint firstItem="8gD-Uf-jSk" firstAttribute="leading" secondItem="XGL-ja-GuX" secondAttribute="leading" id="u3v-ox-8zQ"/>
                         <constraint firstAttribute="height" constant="85" id="uyo-bp-frh"/>
                         <constraint firstAttribute="bottom" secondItem="uIy-ew-Gv8" secondAttribute="bottom" constant="5" id="ynO-Gk-iP2"/>
                     </constraints>
@@ -107,7 +116,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pps-Ii-5hl">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击选择" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pps-Ii-5hl">
                             <rect key="frame" x="102" y="5" width="235" height="34.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
@@ -159,7 +168,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAO-DZ-dFU">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击选择" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAO-DZ-dFU">
                             <rect key="frame" x="102" y="5" width="235" height="35"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
@@ -217,6 +226,7 @@
     </objects>
     <resources>
         <image name="位置" width="18" height="18"/>
+        <image name="位置形状" width="750" height="6"/>
         <image name="选择箭头" width="15" height="15"/>
     </resources>
 </document>
