--- a/dudu/MainView/Center/View/TuiKuanTableViewCell.xib
+++ b/dudu/MainView/Center/View/TuiKuanTableViewCell.xib
@@ -20,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7ox-c5-fNV">
-                        <rect key="frame" x="15" y="15" width="210" height="16"/>
+                        <rect key="frame" x="15" y="15" width="39.5" height="16"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="B47-fQ-4Ed"/>
                         </constraints>
@@ -34,107 +34,7 @@
                             <constraint firstAttribute="height" constant="12" id="1QF-Ac-ZWy"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.82745098039999998" green="0.82745098039999998" blue="0.82745098039999998" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="大筐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PF2-F0-efi">
-                        <rect key="frame" x="15" y="63" width="60" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="TIF-XJ-tfY"/>
-                            <constraint firstAttribute="height" constant="15" id="ruA-2g-ajM"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="中筐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="313-Xv-ZKq">
-                        <rect key="frame" x="15" y="93" width="60" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="xmg-Ed-Qgg"/>
-                            <constraint firstAttribute="height" constant="15" id="zbl-2H-fOq"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小筐" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tm3-Wq-R7p">
-                        <rect key="frame" x="15" y="123" width="60" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="EBK-ZH-iHK"/>
-                            <constraint firstAttribute="width" constant="60" id="o41-iC-fJH"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rhG-bg-Men">
-                        <rect key="frame" x="245" y="63" width="60" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="Jhq-zA-fc6"/>
-                            <constraint firstAttribute="width" constant="60" id="XV6-pc-XnA"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.95294117649999999" green="0.59215686270000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UUm-cF-VvK">
-                        <rect key="frame" x="245" y="93" width="60" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="NQD-r6-YQw"/>
-                            <constraint firstAttribute="height" constant="15" id="xpR-9g-Y09"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.95294117649999999" green="0.59215686270000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&amp;23.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2U-p7-UdF">
-                        <rect key="frame" x="245" y="123" width="60" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="2d5-IH-5pP"/>
-                            <constraint firstAttribute="height" constant="15" id="p4m-96-ZGi"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.95294117649999999" green="0.59215686270000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="x12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJX-TL-hxB">
-                        <rect key="frame" x="200" y="63" width="40" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="40" id="iMv-z7-WiE"/>
-                            <constraint firstAttribute="height" constant="15" id="l3I-kc-ahQ"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vn-zt-fDZ">
-                        <rect key="frame" x="200" y="93" width="40" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="PUo-27-8AZ"/>
-                            <constraint firstAttribute="width" constant="40" id="WLc-q4-L0N"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vce-4c-5ST">
-                        <rect key="frame" x="200" y="123" width="40" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="40" id="UMc-ts-fPH"/>
-                            <constraint firstAttribute="height" constant="15" id="adj-k4-WMf"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="45k-fJ-3pu">
-                        <rect key="frame" x="245" y="15" width="60" height="15"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="15" id="kfP-lI-F0E"/>
-                            <constraint firstAttribute="width" constant="60" id="w6w-pg-c4y"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" red="0.95294117649999999" green="0.59215686270000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1EW-D5-O9g">
@@ -144,41 +44,35 @@
                             <constraint firstAttribute="height" constant="0.5" id="U5b-QE-YC8"/>
                         </constraints>
                     </view>
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PFI-iH-9CY">
+                        <rect key="frame" x="0.0" y="58" width="320" height="82.5"/>
+                        <connections>
+                            <outlet property="delegate" destination="KGk-i7-Jjw" id="G3O-hm-M5x"/>
+                        </connections>
+                    </scrollView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="vce-4c-5ST" firstAttribute="top" secondItem="6vn-zt-fDZ" secondAttribute="bottom" constant="15" id="0dR-bB-hXS"/>
-                    <constraint firstItem="g2U-p7-UdF" firstAttribute="leading" secondItem="vce-4c-5ST" secondAttribute="trailing" constant="5" id="3Eq-4h-vQr"/>
-                    <constraint firstItem="313-Xv-ZKq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="9W0-jN-I7r"/>
-                    <constraint firstItem="Tm3-Wq-R7p" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Av8-4I-KO6"/>
                     <constraint firstItem="1EW-D5-O9g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="14" id="DwV-18-w45"/>
-                    <constraint firstItem="PF2-F0-efi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="EQq-CG-h6u"/>
-                    <constraint firstItem="313-Xv-ZKq" firstAttribute="top" secondItem="PF2-F0-efi" secondAttribute="bottom" constant="15" id="EYt-qi-xMQ"/>
-                    <constraint firstItem="45k-fJ-3pu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Ipb-tn-Vev"/>
-                    <constraint firstAttribute="trailing" secondItem="45k-fJ-3pu" secondAttribute="trailing" constant="15" id="Jm7-b4-djt"/>
+                    <constraint firstItem="PFI-iH-9CY" firstAttribute="top" secondItem="JVK-db-FGD" secondAttribute="bottom" constant="10" id="Goz-GG-Tne"/>
+                    <constraint firstAttribute="trailing" secondItem="PFI-iH-9CY" secondAttribute="trailing" id="JFX-TC-OPd"/>
                     <constraint firstItem="JVK-db-FGD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="JqX-w8-Rct"/>
                     <constraint firstItem="7ox-c5-fNV" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="SJb-iy-BIz"/>
-                    <constraint firstItem="PF2-F0-efi" firstAttribute="top" secondItem="JVK-db-FGD" secondAttribute="bottom" constant="15" id="STH-3Z-747"/>
-                    <constraint firstAttribute="trailing" secondItem="UUm-cF-VvK" secondAttribute="trailing" constant="15" id="SdW-sr-uYt"/>
                     <constraint firstAttribute="bottom" secondItem="1EW-D5-O9g" secondAttribute="bottom" id="TUt-vw-rFL"/>
-                    <constraint firstItem="rhG-bg-Men" firstAttribute="leading" secondItem="FJX-TL-hxB" secondAttribute="trailing" constant="5" id="Uwd-te-tIL"/>
-                    <constraint firstItem="rhG-bg-Men" firstAttribute="top" secondItem="JVK-db-FGD" secondAttribute="bottom" constant="15" id="Xbp-4d-nmf"/>
-                    <constraint firstItem="g2U-p7-UdF" firstAttribute="top" secondItem="UUm-cF-VvK" secondAttribute="bottom" constant="15" id="Y8J-jP-mSu"/>
                     <constraint firstAttribute="trailing" secondItem="1EW-D5-O9g" secondAttribute="trailing" constant="14" id="Zic-ko-Z8n"/>
-                    <constraint firstItem="FJX-TL-hxB" firstAttribute="top" secondItem="JVK-db-FGD" secondAttribute="bottom" constant="15" id="dS6-An-3SJ"/>
                     <constraint firstItem="JVK-db-FGD" firstAttribute="top" secondItem="7ox-c5-fNV" secondAttribute="bottom" constant="5" id="ekG-Ub-yic"/>
-                    <constraint firstItem="UUm-cF-VvK" firstAttribute="top" secondItem="rhG-bg-Men" secondAttribute="bottom" constant="15" id="ela-L5-V17"/>
-                    <constraint firstItem="6vn-zt-fDZ" firstAttribute="top" secondItem="FJX-TL-hxB" secondAttribute="bottom" constant="15" id="fQH-oi-kRc"/>
-                    <constraint firstItem="45k-fJ-3pu" firstAttribute="leading" secondItem="7ox-c5-fNV" secondAttribute="trailing" constant="20" id="fph-l1-xh4"/>
                     <constraint firstItem="7ox-c5-fNV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="iAz-kV-FUp"/>
                     <constraint firstAttribute="trailing" secondItem="JVK-db-FGD" secondAttribute="trailing" constant="20" id="izg-bk-G6k"/>
-                    <constraint firstAttribute="trailing" secondItem="rhG-bg-Men" secondAttribute="trailing" constant="15" id="ldp-Tq-nXX"/>
-                    <constraint firstItem="UUm-cF-VvK" firstAttribute="leading" secondItem="6vn-zt-fDZ" secondAttribute="trailing" constant="5" id="nCz-Br-bFI"/>
-                    <constraint firstItem="Tm3-Wq-R7p" firstAttribute="top" secondItem="313-Xv-ZKq" secondAttribute="bottom" constant="15" id="qoF-qp-cDy"/>
-                    <constraint firstAttribute="trailing" secondItem="g2U-p7-UdF" secondAttribute="trailing" constant="15" id="vZC-Wh-AvR"/>
+                    <constraint firstItem="PFI-iH-9CY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="qQF-Gg-hxa"/>
+                    <constraint firstAttribute="bottom" secondItem="PFI-iH-9CY" secondAttribute="bottom" constant="10" id="sWM-s3-XZD"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
-            <point key="canvasLocation" x="32" y="104.5"/>
+            <connections>
+                <outlet property="dateLabel" destination="JVK-db-FGD" id="6mH-4e-yxw"/>
+                <outlet property="kuangScroll" destination="PFI-iH-9CY" id="Jf9-dm-Snm"/>
+                <outlet property="orderLabel" destination="7ox-c5-fNV" id="MbM-rz-fId"/>
+            </connections>
+            <point key="canvasLocation" x="-168" y="96"/>
         </tableViewCell>
     </objects>
 </document>
